--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
-    "nodemailer": "^6.9.16"
+    "nodemailer": "^6.9.16",
+    "slugify": "^1.6.6"
   }
 }
